Creating hello world with Jest

--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -4,8 +4,8 @@
     "outDir": "../out-tsc/spec",
     "module": "commonjs",
     "types": [
-      "jasmine",
-      "node"
+      "node",
+      "jest"
     ]
   },
   "files": [
