--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "helloWorld": {
+    "helloWorldWithJest": {
       "root": "",
       "projectType": "application",
       "prefix": "app",
@@ -11,7 +11,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/helloWorld",
+            "outputPath": "dist/helloWorldWithJest",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -56,18 +56,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "helloWorld:build"
+            "browserTarget": "helloWorldWithJest:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "helloWorld:build:production"
+              "browserTarget": "helloWorldWithJest:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "helloWorld:build"
+            "browserTarget": "helloWorldWithJest:build"
           }
         },
         "test": {
@@ -111,7 +111,7 @@
         }
       }
     },
-    "helloWorld-e2e": {
+    "helloWorldWithJest-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -119,7 +119,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "helloWorld:serve"
+            "devServerTarget": "helloWorldWithJest:serve"
           }
         },
         "lint": {
