--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "jesttest": " node .\\node_modules\\jest\\bin\\jest.js",
+    "jesttest:watch": " node .\\node_modules\\jest\\bin\\jest.js --watch",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0-rc.1",
+    "@angular/cdk": "^6.0.0-rc.12",
     "@angular/common": "^6.0.0-rc.1",
     "@angular/compiler": "^6.0.0-rc.1",
     "@angular/core": "^6.0.0-rc.1",
     "@angular/forms": "^6.0.0-rc.1",
     "@angular/http": "^6.0.0-rc.1",
+    "@angular/material": "^6.0.0-rc.12",
     "@angular/platform-browser": "^6.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
     "@angular/router": "^6.0.0-rc.1",
@@ -26,17 +29,19 @@
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0-rc.1",
     "@angular-devkit/build-angular": "~0.5.0",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.0-rc.5",
+    "@angular/compiler-cli": "^6.0.0-rc.1",
     "@angular/language-service": "^6.0.0-rc.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^22.2.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^22.4.3",
+    "jest-preset-angular": "^5.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
@@ -44,6 +49,11 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupJest.ts"
   }
 }
